# Synqueen

./: .clang-format  .gitignore  synqueen.code-workspace
service/: CMakeLists.txt  CMakePresets.json  vcpkg.json
service/common/src/: platform.hpp  standardpaths.cpp  standardpaths.hpp
service/corelib/: CMakeLists.txt
service/corelib/include/: corelib.hpp
service/corelib/src/: corelib.cpp  standardpaths.cpp  standardpaths.hpp
service/include/: service.hpp
service/windows/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp
